--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Adding large CSV files
+credits.csv
+keywords.csv
+links.csv
+links_small.csv
+movies_metadata.csv
+ratings.csv
+ratings_small.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
