--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ movies_metadata.csv
 ratings.csv
 ratings_small.csv
 
+# Adding config file
+config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
